--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "neodash",
+  "name": "NeoDash",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "version": "1.0.2",
-  "homepage":"https://nielsdejong.nl/neodash",
+  "homepage": "https://nielsdejong.nl/neodash",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
   },
@@ -11,13 +11,16 @@
     {
       "src": "favicon.ico",
       "type": "ico"
+    },
+    {
+      "src": "favicon.png",
+      "type": "png"
     }
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/nielsdejong/neodash/"
   },
-
   "private": false,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
@@ -25,7 +28,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.4",
-    "axios": "^0.16.2",
+    "axios": "^0.18.1",
     "d3": "4.5.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
