Change homepage to ./
Neo4j Desktop files are loaded over file:/// rather than http(s):// so changing the homepage will mean the JS files are referenced locally in index.html

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "neodash",
   "description": "NeoDash - Neo4j Dashboard Builder",
-  "version": "1.0.3",
-  "homepage": "https://nielsdejong.nl/neodash",
+  "version": "1.0.4",
+  "homepage": "./",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
   },
