Moved ui folder contents to root, added publish step to desktop-signer.sh,

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "type": "png"
     }
   ],
-  "dist" : {
+  "dist": {
     "tarball": "https://github.com/nielsdejong/neodash/releases/download/1.0.3/neodash-1.0.3.tgz"
   },
   "repository": {
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rimraf *.tgz && rimraf dist && react-scripts build && mv build dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -65,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.2"
   }
 }
