--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ target
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -28,3 +29,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Ignore builds
+*.tgz
