--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neodash",
   "description": "NeoDash - Neo4j Dashboard Builder",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "./",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -38,6 +38,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jquery": "^3.5.1",
+    "jsoncrush": "latest",
     "leaflet": "latest",
     "materialize-css": "^1.0.0",
     "neo4j-driver": "latest",
