Pin slightly older version of react-leaflet

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@material-ui/system": "^4.12.1",
     "@material-ui/utils": "^4.11.2",
     "@mui/x-data-grid": "^4.0.1",
-    "@react-leaflet/core": "^1.0.2",
+    "@react-leaflet/core": "1.0.2",
     "codemirror": "^5.63.3",
     "cypher-codemirror": "^1.1.7",
     "d3-scale-chromatic": "^3.0.0",
@@ -85,7 +85,7 @@
     "react-dom": "^16.12.0",
     "react-force-graph-2d": "^1.23.8",
     "react-highlight.js": "^1.0.7",
-    "react-leaflet": "^3.1.0",
+    "react-leaflet": "3.1.0",
     "react-leaflet-enhanced-marker": "^1.0.21",
     "react-markdown": "^7.1.0",
     "react-redux": "^7.2.4",
