--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
   "author": "Niels de Jong",
   "dependencies": {
     "@babel/runtime": "^7.14.6",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -46,7 +44,6 @@
     "codemirror": "^5.65.1",
     "cypher-codemirror": "github:nielsdejong/cypher-editor#c0eff97fc97f22355e60b57fb6f8dc26b16f9a5f",
     "d3-scale-chromatic": "^3.0.0",
-    "file-loader": "^6.2.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
@@ -61,9 +58,8 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
-    "source-map-loader": "^1.1.3",
-    "use-neo4j": "^0.3.6",
-    "webpack": "^5.67.0"
+    "use-neo4j": "^0.3.6"
+
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
@@ -79,6 +75,11 @@
     "style-loader": "^1.1.3",
     "styled-components": "^5.3.3",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "webpack": "^5.67.0",
+    "source-map-loader": "^1.1.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "file-loader": "^6.2.0"
   }
 }
