--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.3.0",
-    "@mui/x-data-grid": "^5.3.0",
+    "@mui/x-data-grid": "^5.2.2",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@nivo/pie": "^0.79.1",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
     "codemirror": "^5.65.1",
@@ -59,7 +60,6 @@
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
     "use-neo4j": "^0.3.6"
-
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
@@ -69,17 +69,17 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.16.9",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^3.6.0",
-    "react-hot-loader": "^4.13.0",
-    "style-loader": "^1.1.3",
-    "styled-components": "^5.3.3",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "webpack": "^5.67.0",
-    "source-map-loader": "^1.1.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "file-loader": "^6.2.0"
+    "babel-loader": "^8.2.3",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.2.0",
+    "react-hot-loader": "^4.13.0",
+    "source-map-loader": "^1.1.3",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.3.3",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   }
 }
