--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neodash",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -23,83 +23,63 @@
   ],
   "scripts": {
     "dev": "npx webpack-dev-server --mode development",
-    "build": "npx webpack --mode production && rm -rf build && mkdir build && cp -r public/* build/ && mkdir build/dist &&  mv dist/ build/",
+    "build": "npx webpack --mode production && cp -r public/* dist/",
     "sync": "aws s3 sync --acl public-read build s3://neodash.graphapp.io/preview",
     "test": "ts-mocha \"src/**/*.test.tsx\" --require @babel/register --recursive"
   },
   "keywords": [],
   "author": "Niels de Jong",
-  "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/register": "^7.14.5",
-    "@graphapps/charts": "github:nielsdejong/charts#cd8bf3707d48f2c34ec6a1ad126cfd28b5ac3065",
-    "@types/chai": "^4.2.21",
-    "@types/expect": "^24.3.0",
-    "@types/leaflet": "^1.7.5",
-    "@types/mocha": "^8.2.3",
-    "@types/react-dom": "^17.0.9",
-    "@types/sinon": "^10.0.2",
-    "@types/styled-components": "^5.1.11",
-    "babel-loader": "^8.0.6",
-    "chai": "^4.3.4",
-    "css-loader": "^3.4.2",
-    "fetch-mock": "^9.11.0",
-    "mocha": "^9.0.2",
-    "node-fetch": "^2.6.1",
-    "react-hot-loader": "^4.12.19",
-    "sinon": "^11.1.1",
-    "style-loader": "^1.1.3",
-    "styled-components": "^5.3.0",
-    "ts-loader": "^9.2.3",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^4.3.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "3.7.1"
-  },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styles": "^4.11.4",
-    "@material-ui/system": "^4.12.1",
-    "@material-ui/utils": "^4.11.2",
-    "@mui/material": "^5.2.7",
-    "@mui/x-data-grid": "^5.2.1",
-    "@react-leaflet/core": "1.0.2",
-    "codemirror": "^5.63.3",
-    "cypher-codemirror": "^1.1.7",
+    "@mui/material": "^5.3.0",
+    "@mui/x-data-grid": "^5.2.2",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
+    "@nivo/line": "^0.79.1",
+    "@nivo/pie": "^0.79.1",
+    "babel-runtime": "^6.26.0",
+    "classnames": "^2.3.1",
+    "codemirror": "^5.65.1",
+    "cypher-codemirror": "github:nielsdejong/cypher-editor#c0eff97fc97f22355e60b57fb6f8dc26b16f9a5f",
     "d3-scale-chromatic": "^3.0.0",
-    "file-loader": "^6.2.0",
-    "graph-app-kit": "https://neo.jfrog.io/neo/api/npm/npm/graph-app-kit/-/graph-app-kit-1.0.4.tgz",
     "leaflet": "^1.7.1",
-    "loader-utils": "^2.0.0",
-    "neo4j-driver": "^4.3.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
-    "react-highlight.js": "^1.0.7",
-    "react-leaflet": "3.1.0",
-    "react-leaflet-enhanced-marker": "^1.0.21",
-    "react-markdown": "^7.1.0",
-    "react-redux": "^7.2.4",
-    "react-use": "^17.2.4",
-    "redux": "^4.1.0",
+    "react-leaflet": "^3.2.5",
+    "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
+    "react-markdown": "^8.0.0",
+    "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "remark-gfm": "^3.0.0",
-    "reselect": "^4.0.0",
-    "source-map-loader": "^1.0.0",
+    "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
+    "reselect": "^4.1.5",
     "use-neo4j": "^0.3.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/register": "^7.16.9",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.2.0",
+    "react-hot-loader": "^4.13.0",
+    "source-map-loader": "^1.1.3",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.3.3",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   }
 }
