Enabled loading/saving/sharing dashboards from other databases

--- a/public/config.json
+++ b/public/config.json
@@ -2,10 +2,10 @@
     "ssoEnabled": false, 
     "ssoDiscoveryUrl": "https://example.com", 
     "standalone": false,
-    "standaloneProtocol": "neo4j+s",
-    "standaloneHost": "example.databases.neo4j.io",
+    "standaloneProtocol": "neo4j",
+    "standaloneHost": "localhost",
     "standalonePort": "7687",
     "standaloneDatabase": "neo4j", 
     "standaloneDashboardName": "My Dashboard",
-    "standaloneDashboardDatabase": "neo4j" 
+    "standaloneDashboardDatabase": "dashboards" 
 }
