--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,7 +1,7 @@
 # build stage
 FROM node:lts-alpine AS build-stage
 RUN apk add --no-cache git
-RUN git clone -b master https://github.com/nielsdejong/neodash.git /usr/local/src/neodash
+RUN git clone https://github.com/nielsdejong/neodash.git /usr/local/src/neodash
 RUN npm install -g typescript jest 
 WORKDIR /usr/local/src/neodash
 RUN npm install
