--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
+    "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
     "react-markdown": "^8.0.0",
