added html to image to lib

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "codemirror": "^5.65.1",
     "cypher-codemirror": "github:nielsdejong/cypher-editor#c0eff97fc97f22355e60b57fb6f8dc26b16f9a5f",
     "d3-scale-chromatic": "^3.0.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
     "material-ui-color-picker": "github:nielsdejong/material-ui-color-picker#c1bae552c1daf81952bf0478d7f71c1a416527d3",
     "neo4j-client-sso": "^1.2.2",
