Icon + quick fix
Fixes base on comments

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "^5.2.2",
     "@nivo/bar": "^0.79.1",
+    "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
     "@nivo/sunburst": "^0.79.1",
-    "@nivo/circle-packing": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
@@ -59,6 +59,7 @@
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
+    "react-force-graph-3d": "^1.21.12",
     "react-leaflet": "^3.2.5",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
     "react-markdown": "^8.0.0",
