--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
-    "react-force-graph-3d": "^1.21.12",
     "react-leaflet": "^3.2.5",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
     "react-markdown": "^8.0.0",
@@ -82,7 +81,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "babel-loader": "^8.2.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^3.f6.0",
     "file-loader": "^6.2.0",
     "react-hot-loader": "^4.13.0",
     "source-map-loader": "^1.1.3",
