Added Hierarchical Charts (#124)
* Added extra option (standalone dashboard by URL to build config

* WIP on dockerfile

* Reverted back to old Docker config

* Fixed import for react-color-picker, clean up Dockerfile

* Updated material-ui-color-picker dependency

* Report updates base on global params

Disable refresh when a global parameter is changed that is not used in the report

* Update CardView.tsx

Removing extra logs

* Hierarchical  Charts

Hierarchical  Charts Added
Pie Chart Options added
Pie Chart Percentage Default true

* Added extra option (standalone dashboard by URL to build config

* WIP on dockerfile

* Reverted back to old Docker config

* Fixed import for react-color-picker, clean up Dockerfile

* Updated material-ui-color-picker dependency

* Update CardView.tsx

Removing extra logs

* Hierarchical  Charts

Hierarchical  Charts Added
Pie Chart Options added
Pie Chart Percentage Default true

* Added extra option (standalone dashboard by URL to build config

* Merge

* Reverted back to old Docker config

* Merge

* Updated material-ui-color-picker dependency

* Added missing line in Dockerfile

* Icon + quick fix

Fixes base on comments

* Added comments to describe functionality

* Fixed comments on PR review for hierarchy reports

* Updated Dockerfile and package.json

* Removed console.log

Co-authored-by: Niels de Jong <niels-121@hotmail.com>

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "dev": "npx webpack-dev-server --mode development",
+    "debug": "npx --node-options='--inspect' webpack-dev-server --mode development",
     "build": "npx webpack --mode production && cp -r public/* dist/",
     "sync": "aws s3 sync --acl public-read build s3://neodash.graphapp.io/preview",
     "test": "ts-mocha \"src/**/*.test.tsx\" --require @babel/register --recursive"
@@ -39,9 +40,12 @@
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "^5.2.2",
     "@nivo/bar": "^0.79.1",
+    "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@nivo/sunburst": "^0.79.1",
+    "@nivo/treemap": "^0.79.1",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
     "codemirror": "^5.65.1",
