Clean up of card settings

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "material-ui-color-picker": "github:nielsdejong/material-ui-color-picker#c1bae552c1daf81952bf0478d7f71c1a416527d3",
     "neo4j-client-sso": "^1.2.2",
     "react": "^17.0.2",
