--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "debug": "npx --node-options='--inspect' webpack-dev-server --mode development",
     "build": "npx webpack --mode production && cp -r public/* dist/",
     "sync": "aws s3 sync --acl public-read build s3://neodash.graphapp.io/preview",
-    "test": "ts-mocha \"src/**/*.test.tsx\" --require @babel/register --recursive"
+    "test": "npx cypress open",
+    "test-headless": "npx cypress run"
   },
   "keywords": [],
   "author": "Niels de Jong",
