--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "cypress": "^9.5.3",
     "file-loader": "^6.2.0",
     "react-hot-loader": "^4.13.0",
+    "serverless-finch": "^4.0.0",
     "source-map-loader": "^1.1.3",
     "style-loader": "^1.1.3",
     "styled-components": "^5.3.3",
