--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
      matrix:
        node-version: [17.x]
    steps:
+   - run echo ${{ secrets.AWS_ACCESS_KEY_ID }}
    - uses: actions/checkout@v2
    - name: Use Node.js ${{ matrix.node-version }}
      uses: actions/setup-node@v1
