Removed old cypress files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Serverless S3
  
 on:
  push:
-   branches: [ master ]
+   branches: [ master, develop ]
  pull_request:
    branches: [ master ]
  
