--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Serverless S3
+name: NeoDash CI/CD
  
 on:
  push:
-   branches: [ master, develop ]
+   branches: [ develop ]
  pull_request:
-   branches: [ master ]
+   branches: [ develop ]
  
 jobs:
  build:
