--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
      uses: cypress-io/github-action@v2
      with:
         build: npm run build
-        start: npm start
+        start: npm run dev
    - name: Set AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
      with:
