--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
      with:
         build: npm run build
         start: npm run dev
+        wait-on: 'http://localhost:3000'
    - name: Set AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
      with:
