--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -2,9 +2,9 @@ name: NeoDash CI/CD
  
 on:
  push:
-   branches: [ master ]
+   branches: [ develop ]
  pull_request:
-   branches: [ master ]
+   branches: [ develop ]
  
 jobs:
  build-s3:
