--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -7,68 +7,39 @@ on:
    branches: [ develop ]
  
 jobs:
-  build-s3:
-   needs: build-test
+  build-npm:
    runs-on: ubuntu-latest
    strategy:
      matrix:
        node-version: [17.x]
    steps:
-   - uses: actions/checkout@v2
-   - name: Use Node.js ${{ matrix.node-version }}
-     uses: actions/setup-node@v1
-     with:
-       node-version: ${{ matrix.node-version }}
-   - run: npm install
-   - run: npm run build
-   - name: Set AWS credentials
-     uses: aws-actions/configure-aws-credentials@v1
-     with:
-       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-       aws-region: us-west-1
-   - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
-
-  build-test:
-   runs-on: ubuntu-latest
-   strategy:
-     matrix:
-       node-version: [17.x]
-   steps:
-   - uses: actions/checkout@v2
-   - name: Use Node.js ${{ matrix.node-version }}
-     uses: actions/setup-node@v1
-     with:
-       node-version: ${{ matrix.node-version }}
-   - run: npm install
-   - name: Cypress run
-     uses: cypress-io/github-action@v2
-     with:
-        build: npm run build
-        start: npm run dev
-        wait-on: 'http://localhost:3000'
-
-  build-docker:
-   needs: build-test
-   runs-on: ubuntu-latest
-   strategy:
-     matrix:
-       node-version: [17.x]
-   steps:
-   - name: run Docker 
-     uses: actions/checkout@v2
-   - name: Login to Docker Hub
-     uses: docker/login-action@v1
-     with:
-       username: ${{ secrets.DOCKER_HUB_USERNAME }}
-       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-   - name: Set up Docker Buildx
-     uses: docker/setup-buildx-action@v1
-   - name: Build and push
-     uses: docker/build-push-action@v2
-     with:
-      context: .
-      file: ./Dockerfile
-      push: true
-      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:develop
+   - name: Package and unpackage the app
+   - run: npm run-script build
+   - run: npm pack
+   - run: rm -rf target
+   - run: mkdir target
+   - run: mv *.tgz target/
+   - run: cd target/
+   - run: tar -xvf *.tgz
+   - run: rm -f *.tgz
+   - run: cp package/dist/favicon.ico package/favicon.ico
+   - name: Remove certificates and keys
+   - run: rm package/*.cert
+   - run: rm package/*.pem
+   - name: Sign the code & verify
+   - run: npx @neo4j/code-signer --app ./package --private-key ../neo4j-labs-app.pem --cert ../neo4j-labs-app.cert --passphrase ${{ secrets.GRAPH_APP_PASSPHRASE }}
+   - run: npx @neo4j/code-signer --verify  --app ./package --root-cert ../neo4j_desktop.cert
+   - name: Pack it back up again
+   - run: cd package
+   - run: npm pack
+   - run: mv *.tgz ../
+   - name: Remove the package folder
+   - run: rm -rf package
+   - run: cd ..
+   - name: Verify it again
+   - run: tar xvf *.tgz package
+   - run: npx @neo4j/code-signer --verify  --app ./package --root-cert ../neo4j_desktop.cert
+   - run: rm -rf package
+   - name: Publish to npm
+   - run: echo Done!
    
