--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -13,7 +13,11 @@ jobs:
      matrix:
        node-version: [17.x]
    steps:
-   - name: Package and unpackage the app
+   - uses: actions/checkout@v2
+   - name: Use Node.js ${{ matrix.node-version }}
+     uses: actions/setup-node@v1
+     with:
+       node-version: ${{ matrix.node-version }}
    - run: npm run-script build
    - run: npm pack
    - run: rm -rf target
@@ -23,23 +27,17 @@ jobs:
    - run: tar -xvf *.tgz
    - run: rm -f *.tgz
    - run: cp package/dist/favicon.ico package/favicon.ico
-   - name: Remove certificates and keys
    - run: rm package/*.cert
    - run: rm package/*.pem
-   - name: Sign the code & verify
    - run: npx @neo4j/code-signer --app ./package --private-key ../neo4j-labs-app.pem --cert ../neo4j-labs-app.cert --passphrase ${{ secrets.GRAPH_APP_PASSPHRASE }}
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert ../neo4j_desktop.cert
-   - name: Pack it back up again
    - run: cd package
    - run: npm pack
    - run: mv *.tgz ../
-   - name: Remove the package folder
    - run: rm -rf package
    - run: cd ..
-   - name: Verify it again
    - run: tar xvf *.tgz package
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert ../neo4j_desktop.cert
    - run: rm -rf package
-   - name: Publish to npm
    - run: echo Done!
    
