--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -18,6 +18,7 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
+   - run: npm install
    - run: npm run-script build
    - run: npm pack
    - run: rm -rf target
