--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -27,10 +27,10 @@ jobs:
    - run: tar -xvf target/*.tgz
    - run: rm -f target/*.tgz
    - run: cp package/dist/favicon.ico package/favicon.ico
-   - run: echo ${{ secrets.NEO4J_LABS_APP_KEY }} > neo4j-labs-app.pem 
-   - run: echo ${{ secrets.NEO4J_LABS_APP_CERTIFICATE }} > neo4j-labs-app.cert
+   - run: echo "${{ secrets.NEO4J_LABS_APP_KEY }}" > neo4j-labs-app.pem 
+   - run: echo "${{ secrets.NEO4J_LABS_APP_CERTIFICATE }}" > neo4j-labs-app.cert
    - run: npx @neo4j/code-signer --app ./package --private-key neo4j-labs-app.pem --cert neo4j-labs-app.cert --passphrase ${{ secrets.NEO4J_DESKTOP_PASSPHRASE }}
-   - run: echo ${{ secrets.NEO4J_DESKTOP_CERTIFICATE }} > neo4j_desktop.cert
+   - run: echo "${{ secrets.NEO4J_DESKTOP_CERTIFICATE }}" > neo4j_desktop.cert
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert neo4j_desktop.cert
    - run: cd package && npm pack
    - run: mv *.tgz ../
