--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -33,8 +33,9 @@ jobs:
    - run: echo "${{ secrets.NEO4J_DESKTOP_CERTIFICATE }}" > neo4j_desktop.cert
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert neo4j_desktop.cert
    - run: cd package && npm pack
-   - run: mv package/*.tgz ../
+   - run: mv package/*.tgz .
    - run: rm -rf package
+   - run: ls
    - run: tar xvf *.tgz package
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert neo4j_desktop.cert
    - run: rm -rf package
