--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -6,8 +6,74 @@ on:
  pull_request:
    branches: [ develop ]
  
+ 
 jobs:
-  build-npm:
+ build-test:
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node-version: [17.x]
+   steps:
+   - uses: actions/checkout@v2
+   - name: Use Node.js ${{ matrix.node-version }}
+     uses: actions/setup-node@v1
+     with:
+       node-version: ${{ matrix.node-version }}
+   - run: npm install
+   - name: Cypress run
+     uses: cypress-io/github-action@v2
+     with:
+        build: npm run build
+        start: npm run dev
+        wait-on: 'http://localhost:3000'
+ build-s3:
+   needs: build-test
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node-version: [17.x]
+   steps:
+   - uses: actions/checkout@v2
+   - name: Use Node.js ${{ matrix.node-version }}
+     uses: actions/setup-node@v1
+     with:
+       node-version: ${{ matrix.node-version }}
+   - run: npm install
+   - run: npm run build
+   - name: Set AWS credentials
+     uses: aws-actions/configure-aws-credentials@v1
+     with:
+       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+       aws-region: us-west-1
+   - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
+
+ build-docker:
+   needs: build-test
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node-version: [17.x]
+   steps:
+   - name: run Docker 
+     uses: actions/checkout@v2
+   - name: Login to Docker Hub
+     uses: docker/login-action@v1
+     with:
+       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+   - name: Set up Docker Buildx
+     uses: docker/setup-buildx-action@v1
+   - name: Build and push
+     uses: docker/build-push-action@v2
+     with:
+      context: .
+      file: ./Dockerfile
+      push: true
+      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:develop
+
+ build-npm:
+   needs: build-test
    runs-on: ubuntu-latest
    strategy:
      matrix:
