Downgraded mui data grid

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.3.0",
-    "@mui/x-data-grid": "^5.2.2",
+    "@mui/x-data-grid": "5.2.2",
     "@nivo/bar": "^0.79.1",
     "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
