Removed video generation from .cypress.json, fixed workflows, reverted index.html

--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -46,6 +46,7 @@ jobs:
        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
        aws-region: us-west-1
+   - run: curl https://gist.githubusercontent.com/nielsdejong/5be9e87e71aa06be5695a57a0daec04c/raw/f3673787d74d402b4450a4a58025e64feb4466d5/index.html > dist/index.html
    - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
 
  build-docker:
