--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -17,6 +17,7 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
+   - run: rm -rf docs
    - run: npm install
    - name: Cypress run
      uses: cypress-io/github-action@v2
@@ -56,6 +57,7 @@ jobs:
    steps:
    - name: run Docker 
      uses: actions/checkout@v2
+   - run: rm -rf docs
    - name: Login to Docker Hub
      uses: docker/login-action@v1
      with:
@@ -83,6 +85,7 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
+   - run: rm -rf docs
    - run: npm install
    - run: npm run-script build
    - run: npm pack
