--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -17,6 +17,7 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
+   - run: rm -rf docs
    - run: npm install
    - name: Cypress run
      uses: cypress-io/github-action@v2
