--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -2,7 +2,7 @@ name: Test/Deploy Master
  
 on:
  push:
-   branches: [ develop ]
+   branches: [ master ]
  
  
 jobs:
@@ -47,7 +47,7 @@ jobs:
        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
        aws-region: us-west-1
    - run: curl https://gist.githubusercontent.com/nielsdejong/5be9e87e71aa06be5695a57a0daec04c/raw/f3673787d74d402b4450a4a58025e64feb4466d5/index.html > dist/index.html
-   - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
+   - run: aws s3 rm s3://neodash.graphapp.io/ --recursive && aws s3 sync dist s3://neodash.graphapp.io/ --acl public-read
  build-docker:
    needs: build-test
    runs-on: ubuntu-latest
@@ -71,7 +71,7 @@ jobs:
       context: .
       file: ./Dockerfile
       push: true
-      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:develop
+      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.1
  build-npm:
    needs: build-test
    runs-on: ubuntu-latest
