--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ target
 
 # testing
 /coverage
+cypress/plugins
+cypress/support
+cypress/videos
 
 # production
 /build
@@ -32,3 +35,10 @@ yarn-error.log*
 
 # Ignore builds
 *.tgz
+
+# package directories
+node_modules
+jspm_packages
+
+# Serverless directories
+.serverless
