Added step in workflow for injecting the deployment HTML file into the npm published package

--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -87,6 +87,7 @@ jobs:
    - run: rm -rf docs
    - run: npm install
    - run: npm run-script build
+   - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
    - run: npm pack
    - run: rm -rf target
    - run: mkdir target
