--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
+    "@nivo/geo": "^0.79.1",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
     "@nivo/sunburst": "^0.79.1",
