--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
+    "simpleheat": "^0.4.0",
     "use-neo4j": "^0.3.6"
   },
   "devDependencies": {
