--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
+    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
@@ -70,7 +71,6 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
-    "simpleheat": "^0.4.0",
     "use-neo4j": "^0.3.6"
   },
   "devDependencies": {
