--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-force-graph-2d": "^1.23.8",
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
+    "react-leaflet-cluster": "^1.0.4",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
