--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "react-force-graph-2d": "^1.23.8",
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
+    "react-leaflet-cluster": "^1.0.4",
     "react-leaflet-enhanced-marker": "github:nielsdejong/react-leaflet-enhanced-marker#603a7d73dc9b13a31ab1e8abfd932d63263b4af0",
+    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
@@ -88,7 +90,7 @@
     "file-loader": "^6.2.0",
     "react-hot-loader": "^4.13.0",
     "serverless-finch": "^4.0.0",
-    "source-map-loader": "^1.1.3",
+    "source-map-loader": "^4.0.0",
     "style-loader": "^1.1.3",
     "styled-components": "^5.3.3",
     "webpack": "^5.67.0",
