--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nivo/geo": "^0.79.1",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@nivo/sankey": "^0.79.1",
     "@nivo/sunburst": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
     "babel-runtime": "^6.26.0",
