--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neodash",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -45,6 +45,7 @@
     "@nivo/geo": "^0.79.1",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@nivo/sankey": "^0.79.1",
     "@nivo/sunburst": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
     "babel-runtime": "^6.26.0",
