--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "5.10.0",
+    "@neo4j-ndl/base": "^0.7.1",
+    "@neo4j-ndl/react": "^0.7.1",
     "@nivo/bar": "^0.79.1",
     "@nivo/circle-packing": "^0.79.1",
     "@nivo/core": "^0.79.0",
