Replaced npm scripts by yarn, fixed issues in package.json

--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -17,12 +17,12 @@ jobs:
      with:
        node-version: ${{ matrix.node-version }}
    - run: rm -rf docs
-   - run: npm install
+   - run: yarn install
    - name: Cypress run
      uses: cypress-io/github-action@v2
      with:
-        build: npm run build
-        start: npm run dev
+        build: yarn run build
+        start: yarn run dev
         wait-on: 'http://localhost:3000'
  deploy-docs:
     needs: build-test
@@ -46,8 +46,8 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
-   - run: npm install
-   - run: npm run build
+   - run: yarn install
+   - run: yarn run build
    - name: Set AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
      with:
