--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -18,12 +18,12 @@ jobs:
      with:
        node-version: ${{ matrix.node-version }}
    - run: rm -rf docs
-   - run: npm install
+   - run: yarn install
    - name: Cypress run
      uses: cypress-io/github-action@v2
      with:
-        build: npm run build
-        start: npm run dev
+        build: yarn run build
+        start: yarn run dev
         wait-on: 'http://localhost:3000'
  build-s3:
    needs: build-test
@@ -38,8 +38,8 @@ jobs:
      with:
        node-version: ${{ matrix.node-version }}
    - run: rm -rf docs
-   - run: npm install
-   - run: npm run build
+   - run: yarn install
+   - run: yarn run build
    - name: Set AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
      with:
@@ -85,10 +85,10 @@ jobs:
      with:
        node-version: ${{ matrix.node-version }}
    - run: rm -rf docs
-   - run: npm install
-   - run: npm run-script build
+   - run: yarn install
+   - run: yarn run-script build
    - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
-   - run: npm pack
+   - run: yarn pack
    - run: rm -rf target
    - run: mkdir target
    - run: mv *.tgz target/
@@ -100,7 +100,7 @@ jobs:
    - run: npx @neo4j/code-signer --app ./package --private-key neo4j-labs-app.pem --cert neo4j-labs-app.cert --passphrase ${{ secrets.NEO4J_DESKTOP_PASSPHRASE }}
    - run: echo "${{ secrets.NEO4J_DESKTOP_CERTIFICATE }}" > neo4j_desktop.cert
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert neo4j_desktop.cert
-   - run: cd package && npm pack
+   - run: cd package && yarn pack
    - run: mv package/*.tgz .
    - run: rm -rf package
    - run: tar xvf *.tgz package
