Upversioning some old dependencies

--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
     "codemirror": "^5.65.3",
-    "cypher-codemirror": "latest",
+    "cypher-codemirror": "1.1.9",
     "d3-scale-chromatic": "^3.0.0",
     "dom-to-image": "^2.6.0",
     "leaflet": "^1.7.1",
-    "lodash.debounce": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
-    "material-ui-color-picker": "latest",
+    "material-ui-color-picker": "^3.5.1",
     "neo4j-client-sso": "^1.2.2",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
@@ -63,7 +63,7 @@
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-cluster": "^1.0.4",
-    "react-leaflet-enhanced-marker": "latest",
+    "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
@@ -83,7 +83,7 @@
     "@babel/register": "^7.16.9",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@redux-devtools/extension": "^2.13.9",
+    "@redux-devtools/extension": "^3.2.3",
     "babel-loader": "^8.2.3",
     "css-loader": "^3.6.0",
     "cypress": "^9.5.3",
