--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nivo/geo": "^0.79.1",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.79.1",
+    "@nivo/radar": "^0.79.1",
     "@nivo/sankey": "^0.79.1",
     "@nivo/sunburst": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
