--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neodash",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -28,7 +28,7 @@
     "test-headless": "yarn cypress run"
   },
   "keywords": [],
-  "author": "Niels de Jong",
+  "author": "Neo4j Labs",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
