Live population of example gallery

--- a/gallery/package.json
+++ b/gallery/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "neodash-gallery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "neo4j-driver": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
