--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -77,4 +77,4 @@ jobs:
        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
        aws-region: us-west-1
-   - run: aws s3 rm s3://neodash-gallery.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-gallery.graphapp.io/ --acl public-read
+   - run: aws s3 rm s3://neodash-gallery.graphapp.io/ --recursive && aws s3 sync build s3://neodash-gallery.graphapp.io/ --acl public-read
